force-app/main/default/objects/Team__c/fields/game__c.field-meta.xml
<CustomField>
    <fullName>game__c</fullName>
    <label>game</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cricket</fullName>
            </value>
            <value>
                <fullName>chess</fullName>
            </value>
            <value>
                <fullName>football</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>