force-app/main/default/objects/Team__c/recordTypes/dada.recordType-meta.xml
<RecordType>
    <fullName>dada</fullName>
    <active>true</active>
    <label>dada</label>
</RecordType>