force-app/main/default/objects/Team__c/recordTypes/dravid.recordType-meta.xml
<RecordType>
    <fullName>dravid</fullName>
    <active>true</active>
    <description>saf</description>
    <label>dravid</label>
</RecordType>