force-app/main/default/objects/Team__c/recordTypes/msd.recordType-meta.xml
<RecordType>
    <fullName>msd</fullName>
    <active>true</active>
    <description>cashv</description>
    <label>msd</label>
</RecordType>