force-app/main/default/objects/Team__c/recordTypes/sachin.recordType-meta.xml
<RecordType>
    <fullName>sachin</fullName>
    <active>true</active>
    <description>cashv</description>
    <label>sachin</label>
</RecordType>