force-app/main/default/objects/Team__c/recordTypes/Virat.recordType-meta.xml
<RecordType>
    <fullName>Virat</fullName>
    <active>true</active>
    <description>cashv</description>
    <label>Virat</label>
</RecordType>